# LoveWithU_Oficial

./: .gitignore  Comandos_WEB.txt  README.md  app.db  app.py  config.py  pyproject.toml  system.ps1  tasks.py
LoveWithU.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: __init__.py  forms.py  manage.py  models.py  routes.py
app/templates/: _post.html  base.html  criar_memoria.html  editar_perfil.html  explorar_memorias.html  home.html  index.html  login.html  marketplace.html  perfil.html  register.html  styles.css
migrations/versions/: 0e78a0453aaa_adiciona_usuario_id_na_tabela_memoria.py  10b0adfea602_adicionar_modelo_memoria.py  58937018bba7_criação_das_tabelas_iniciais.py
