[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "LoveWithU"
version = "2025.05.0a1"
dependencies = [
    "Flask",
    "ipython",
    "flask-wtf",
    "flask-sqlalchemy",
    "flask-migrate",
    "flask-login",
    "email_validator",
    "werkzeug",
    "flask-bootstrap"
]

[tool.setuptools]
packages = ["app"]